deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexohneander-zola-deployment
  namespace: websites
  labels:
    app: alexohneander-zola
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alexohneander-zola
  template:
    metadata:
      labels:
        app: alexohneander-zola
    spec:
      containers:
        - name: alexohneander-zola
          image: git.dev-null.rocks/alexohneander/alexohneander-zola:0.1.4
          ports:
            - containerPort: 80
