deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexohneander-zola-service
  namespace: websites
spec:
  selector:
    app: alexohneander-zola
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
